discussion/kv_engine/181671/181671_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

Filter out events in the front end thread

Change-Id: I447e30e2b66cb9e383c5a03e3ea292e6c5aeee3a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-24 05:07:06.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-24 05:30:17.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21399/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_audit.cc:493:13: error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
            NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON,
            ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21399/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21399/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50618/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_audit.cc(493): error C2065: "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50618/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11130/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11130/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11222/ : FAILURE

Compile error at [2022-10-24T05:14:42.873Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: ?NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON? was not declared in this scope; did you mean ?AUDITD_AUDIT_CONFIGURED_AUDIT_DAEMON??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11222/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23835/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23835/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24670/ : FAILURE

Compile error at [2022-10-24T05:12:47.915Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24670/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23430/ : FAILURE

Compile error at [2022-10-24T05:13:18.510Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: ?NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON? was not declared in this scope; did you mean ?AUDITD_AUDIT_CONFIGURED_AUDIT_DAEMON??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23430/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31855/ : FAILURE

Compile error at [2022-10-24T05:16:38.057Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31855/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22848/ : FAILURE

Compile error at [2022-10-24T05:29:49.201Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/tests/testapp/testapp_audit.cc:493:13:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22848/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20661/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42470/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
